docs: Add troubleshooting section for UnsupportedOperationException in ParquetSentimentWriter